<resources>
    <string name="app_name">NetGames</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forget your password?</string>
    <string name="firstName">Name</string>
    <string name="lastName">Apellido</string>
    <string name="login">Login</string>
    <string name="createAcccount">Create account</string>
    <string name="principal_title">Principal</string>
    <string name="send_password_title">Reset Password</string>
    <string name="register_title">Register</string>
    <string name="home_title">Home</string>
    <string name="search_title">Search</string>
    <string name="user_title">User</string>
    <string name="search_txtSearch">Search</string>
    <string name="search_no_games">No results</string>
    <string name="ARG_GAME_ID" translatable="false">Game Id</string>


    <string name="store_choose">Select a store</string>
    <string name="no_stores">No Stores</string>
    <string name="no_user" translatable="false">NOUSER</string>
    <string name="no_password" translatable="false">NOPASSWORD</string>
    <string name="favorites_title">My list</string>
    <string name="register_rellene_toast">There can be no empty fields</string>
    <string name="register_email_error">Failed to verify email</string>
    <string name="register_confirm_account">Email registered correctly. Check your inbox and verify account.</string>
    <string name="forgot_email_enviado">Password recovery email sent</string>
    <string name="password_send_confirmation">An email has been sent to your email with the password change.</string>
    <string name="account_title">My account</string>
    <string name="edit_title">Edit profile</string>
    <string name="favs_no_games">No favorites yet</string>
    <string name="nickname">Nickname</string>
    <string name="account_password_changed">Password changed correctly</string>
    <string name="account_email_changed">Email changed correctly</string>
    <string name="forgot_rellenar_campos">The email field can´t be empty</string>
    <string name="game_gameadded">Game added to my list</string>
    <string name="game_gameremoved">Game removed to my list</string>
    <string name="game_noshops">There aren´t stores</string>
    <string name="login_session_init_correct">Successful login</string>
    <string name="user_logout">Log out</string>
    <string name="connect_to_internet">No internet conection</string>
    <string name="no_conection_detected">No internet conection</string>
    <string name="search_no_games2">No games</string>
    <string name="account_password_different">The password entered is the same</string>
    <string name="account_email_different">The email entered is the same</string>
    <string name="game_no_game">No game info</string>

    <string name="info_title">Info</string>
    <string name="send_password">Send Password</string>
    <string name="game_description">Description</string>
    <string name="game_platforms">Platforms</string>
    <string name="game_no_platforms">No Platforms.</string>
    <string name="game_buy">Buy</string>
    <string name="game_screenshots">Screenshots</string>
    <string name="game_no_screenshots">No screenshots</string>
    <string name="game_video">Video</string>
    <string name="game_no_videos">No videos</string>
    <string name="user_my_favorites">My list</string>
    <string name="user_my_account">My Account</string>
    <string name="user_log_out">Log Out</string>
    <string name="home_action">Action</string>
    <string name="home_strategy">Strategy</string>
    <string name="home_sports">Sports</string>
    <string name="home_adventures">Adventures</string>
    <string name="home_simulation">Simulation</string>
    <string name="home_my_favorites">My list</string>
    <string name="home_no_favorites">No favorites</string>
    <string name="logout_make">Successful logout</string>
    <string name="avatar_changed">Avatar changed</string>
    <string name="nickname_empty">Nickname is empty</string>
    <string name="logo" translatable="false">LOGO</string>
    <string name="appversion">App Version: %1$s</string>
    <string name="assistant_assistantDescription">Assistant</string>
    <string name="assistant_btnFinish">Start</string>
    <string name="assistant_title">Assistant</string>

    <string name="page1">Welcome to NetGames, swipe to get to know the app a little better.</string>
    <string name="page2">Create an account and log in to get all your favorite data and games.</string>
    <string name="page3">From the main view you can interact with the best games of each genre ordered by popularity.</string>
    <string name="page4">Search all your favorite games in the app to know all their information.</string>
    <string name="page5">Change your avatar, nick or any account information from your profile.</string>
    <string name="page6">We hope it has helped you and you have a rewarding experience within the app.</string>
    <string name="info_dialog_title">App Info</string>
    <string name="nameapp">App name: %1$s\n</string>
    <string name="versionapp">App version: %1$s\n</string>
    <string name="version_name">Version name: %1$s\n</string>

    <string name="build_version">Build version: %1$s\n\n</string>


    <string name="licenses">Used libraries:\n\n
    -Retrofit\n
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
    \n\n
    -Google Gson\n
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
    \n\n
    -LikeButton\n
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
    \n\n
        -Rawg\n
        All data and images have been obtained from a free use API.
        You can access it from here https://rawg.io/apidocs\n\n
        Thanks for using the app.</string>


    <string name="info_dialog_ok">Accept</string>
    <string name="licenses_toast">%1$s more steps to know more about the app.</string>
    <string-array name="store_choosed" translatable="false">
        <item>Steam</item>
        <item>Xbox Store</item>
        <item>Playstation Store</item>
        <item>App Store</item>
        <item>Google Play</item>
    </string-array>
</resources>





