<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    app:startDestination="@id/loginDestination">

    <fragment
        android:id="@+id/loginDestination"
        android:name="com.donmedapp.netgames.ui.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/navigateToRegister"
            app:destination="@id/registerDestination" />
        <action
            android:id="@+id/navigateToHome"
            app:destination="@id/homeDestination"
            app:popUpTo="@+id/loginDestination"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/navigateToForgotPassword"
            app:destination="@id/forgotPasswordDestination" />


    </fragment>
    <fragment
        android:id="@+id/registerDestination"
        android:name="com.donmedapp.netgames.ui.register.RegisterFragment"
        android:label="@string/register_title" />
    <fragment
        android:id="@+id/homeDestination"
        android:name="com.donmedapp.netgames.ui.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/home_fragment" >
        <action
            android:id="@+id/navToGame2"
            app:destination="@id/gameDestination" />
    </fragment>
    <fragment
        android:id="@+id/forgotPasswordDestination"
        android:name="com.donmedapp.netgames.ui.forgotPassword.ForgotPasswordFragment"
        android:label="@string/send_password_title" />
    <fragment
        android:id="@+id/searchDestination"
        android:name="com.donmedapp.netgames.ui.search.SearchFragment"
        android:label="@string/search_title"
        tools:layout="@layout/search_fragment">
        <action
            android:id="@+id/navToGame"
            app:destination="@id/gameDestination" />
    </fragment>
    <fragment
        android:id="@+id/userDestination"
        android:name="com.donmedapp.netgames.ui.user.UserFragment"
        android:label="user_fragment"
        tools:layout="@layout/user_fragment" >
        <action
            android:id="@+id/navegateLogOut"
            app:destination="@id/loginDestination"
            app:popUpTo="@+id/main_activity"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/navigateToFavorites"
            app:destination="@id/favoritesDestination" />
    </fragment>
    <fragment
        android:id="@+id/gameDestination"
        android:name="com.donmedapp.netgames.ui.game.GameFragment"
        android:label="Game"
        tools:layout="@layout/game_fragment">
        <argument
            android:name="gameId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/favoritesDestination"
        android:name="com.donmedapp.netgames.ui.favourites.FavoritesFragment"
        android:label="favourites_fragment"
        tools:layout="@layout/favorites_fragment" >
        <action
            android:id="@+id/navToGame3"
            app:destination="@id/gameDestination" />
    </fragment>
</navigation>